Set fixed line height in body element for better readability

--- a/homepage.css
+++ b/homepage.css
@@ -16,6 +16,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    line-height: 1.7;
 }
 
 .logo {
@@ -116,6 +117,10 @@ h1 {
 .author-name {
     font-size: 2.5em;
     font-family: 'Josefin Sans' ,sans-serif;
+}
+
+.introduction {
+    font-size: 1.5em;
 }
 
 
